--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,21 +7,50 @@
         <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
         <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
         <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+        <style>
+            body {
+                padding-top: 1em;
+            }
+            .panel.columns {
+                border: none;
+                flex-direction: row;
+            }
+            .panel.columns > .panel-body {
+                padding: 0;
+            }
+            .card.column {
+                padding: 0;
+            }
+            .card.column > .card-body {
+                padding: 0;
+            }
+            #glCanvas {
+                width: 100%;
+                height: 100%;
+                max-width: 640px;
+                max-width: 480px;
+            }
+            .nav > .nav-item > a {
+                cursor: pointer;
+            }
+        </style>
     </head>
     <body>
-        <div class="panel">
-            <div class="panel-nav navbar">
-                <section class="navbar-section">
-                    <a class="btn mr-2 btn-primary" data-text="cubeWithVideo">Cube with Video</a>
-                    <a class="btn mr-2" data-text="cubeWithNormals">Cube with Normals</a>
-                    <a class="btn mr-2" data-text="cubeWithTexture">Cube with Texture</a>
-                    <a class="btn mr-2" data-text="cube">Cube</a>
-                    <a class="btn mr-2" data-text="square">Square</a>
-                </section>
+        <div class="panel columns">
+            <div class="panel-nav column col-2">
+                <ul class="nav">
+                    <li class="nav-item"><a class="active" data-text="cubeWithVideo">Cube with Video</a></li>
+                    <li class="nav-item"><a class="" data-text="cubeWithNormals">Cube with Normals</a></li>
+                    <li class="nav-item"><a class="" data-text="cubeWithTexture">Cube with Texture</a></li>
+                    <li class="nav-item"><a class="" data-text="cube">Cube</a></li>
+                    <li class="nav-item"><a class="" data-text="squareWithVideo">Square with Video</a></li>
+                    <li class="nav-item"><a class="" data-text="squareWithTexture">Square with Texture</a></li>
+                    <li class="nav-item"><a class="" data-text="square">Square</a></li>
+                </ul>
             </div>
-            <div class="panel-body columns">
+            <div class="panel-body columns column col-8">
                 <div class="card column col-6">
-                    <div class="card-body text-center"><canvas class="mt-2" id="glCanvas" width="640" height="480"></canvas></div>
+                    <div class="card-body text-center"><canvas id="glCanvas" width="640" height="480"></canvas></div>
                 </div>
                 <div class="card column col-6">
                     <div class="card-body text-center" id="image"></div>
