--- a/src/index.ejs
+++ b/src/index.ejs
@@ -28,7 +28,7 @@
                 width: 100%;
                 height: 100%;
                 max-width: 640px;
-                max-width: 480px;
+                max-height: 480px;
             }
             .nav > .nav-item > a {
                 cursor: pointer;
@@ -39,7 +39,8 @@
         <div class="panel columns">
             <div class="panel-nav column col-2">
                 <ul class="nav">
-                    <li class="nav-item"><a class="active" data-text="cubeWithVideo">Cube with Video</a></li>
+                    <li class="nav-item"><a class="active" data-text="sphere">Sphere</a></li>
+                    <li class="nav-item"><a class="" data-text="cubeWithVideo">Cube with Video</a></li>
                     <li class="nav-item"><a class="" data-text="cubeWithNormals">Cube with Normals</a></li>
                     <li class="nav-item"><a class="" data-text="cubeWithTexture">Cube with Texture</a></li>
                     <li class="nav-item"><a class="" data-text="cube">Cube</a></li>
