Add textured-sphere and video-sphere

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -33,17 +33,25 @@
             .nav > .nav-item > a {
                 cursor: pointer;
             }
+            .divider {
+                border-top-color: #c1c3c5;
+                margin: .7rem 0 .2rem;
+            }
         </style>
     </head>
     <body>
         <div class="panel columns">
             <div class="panel-nav column col-2">
                 <ul class="nav">
-                    <li class="nav-item"><a class="active" data-text="sphere">Sphere</a></li>
+                    <li class="nav-item"><a class="active" data-text="sphereWithVideo">Sphere with Video</a></li>
+                    <li class="nav-item"><a class="" data-text="sphereWithTexture">Sphere with Texture</a></li>
+                    <li class="nav-item"><a class="" data-text="sphere">Sphere</a></li>
+                    <div class="divider"></div>
                     <li class="nav-item"><a class="" data-text="cubeWithVideo">Cube with Video</a></li>
                     <li class="nav-item"><a class="" data-text="cubeWithNormals">Cube with Normals</a></li>
                     <li class="nav-item"><a class="" data-text="cubeWithTexture">Cube with Texture</a></li>
                     <li class="nav-item"><a class="" data-text="cube">Cube</a></li>
+                    <div class="divider"></div>
                     <li class="nav-item"><a class="" data-text="squareWithVideo">Square with Video</a></li>
                     <li class="nav-item"><a class="" data-text="squareWithTexture">Square with Texture</a></li>
                     <li class="nav-item"><a class="" data-text="square">Square</a></li>
